# Hell2Modding

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  linux_build.sh  lua_doc_gen.txt  src.7z
.github/workflows/: nightly.yml
cmake_scripts/: capstone.cmake  eastl.cmake  imgui.cmake  lief.cmake  lovely.cmake  lpeg.cmake  lua.cmake  luasocket.cmake  raw_pdb.cmake  rom.cmake  safetyhook.cmake  tolk.cmake
docs/lua/classes/: h2m.lua_patch.md  h2m.pointer.md  rom.config.config_definition.md  rom.config.config_entry.md  rom.config.config_file.md  rom.lua_patch.md  rom.pointer.md  rom.value_wrapper.md
docs/lua/classes/definitions/: rom.config.config_definition.lua  rom.config.config_entry.lua  rom.config.config_file.lua  rom.lua_patch.lua  rom.pointer.lua  rom.value_wrapper.lua
docs/lua/tables/: _ENV - Plugin Specific Global Table.md  h2m.ImGui.md  h2m.audio.md  h2m.gui.md  h2m.h2m.md  h2m.log.md  h2m.md  h2m.memory.md  h2m.mods.md  h2m.path.md  h2m.paths.md  rom._G.md  rom._ROM.md  rom.audio.md  rom.config.md  rom.data.md  rom.game.md  rom.gpk.md  rom.gui.md  rom.inputs.md  rom.log.md  rom.lpeg.md  rom.lz4.md  rom.memory.md  rom.mime.core.md  rom.mime.md  rom.mods.md  rom.on_import.md  rom.path.md  rom.paths.md  rom.socket.core.md  rom.socket.md  rom.tethers.md  rom.tolk.md
docs/lua/tables/definitions/: _ENV - Plugin Specific Global Table.lua  rom._G.lua  rom._ROM.lua  rom.audio.lua  rom.config.lua  rom.data.lua  rom.game.lua  rom.gpk.lua  rom.gui.lua  rom.inputs.lua  rom.log.lua  rom.lpeg.lua  rom.lz4.lua  rom.memory.lua  rom.mime.lua  rom.mods.lua  rom.on_import.lua  rom.path.lua  rom.paths.lua  rom.socket.lua  rom.tethers.lua  rom.tolk.lua
examples/plugins/Hell2Modding-GodMode/: main.lua  manifest.json
examples/plugins/Hell2Modding-ImGui Example/: main.lua
src/: common.hpp  config.hpp  main.cpp  pointers.cpp  pointers.hpp  resources.rc  sjson_overlay.cpp  sjson_overlay.hpp
src/c2shellcode/: c2shellcode.hpp
src/debug/: debug.hpp
src/dll_proxy/: d3d12_proxy.def
src/file_manager/: cache_file.cpp  cache_file.hpp
src/gui/: gui.cpp  gui.hpp  renderer.cpp  renderer.hpp
src/gui/widgets/: imgui_hotkey.hpp
src/hades2/: hades2_pointers.hpp  hades2_pointers_layout_info.hpp  hades_lua.hpp  hooks.hpp  log_write.hpp  pdb_symbol_map.hpp  plugin_file_registry.hpp
src/hades2/disable_sgg_analytics/: disable_sgg_analytics.cpp  disable_sgg_analytics.hpp
src/hades2/lua/: sgg_lua.cpp  sgg_lua.hpp
src/hades2/sgg_exception_handler/: disable_sgg_handler.cpp  disable_sgg_handler.hpp
src/hooks/: hooking.cpp  hooking.hpp
src/input/: hotkey.hpp
src/logger/: exception_handler.cpp  stack_trace.cpp
src/lua/: lua_manager.cpp  lua_manager.hpp  lua_module.cpp  lua_module.hpp  module_info.hpp
src/lua/bindings/: gui.cpp  gui.hpp  imgui.hpp  imgui_window.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  path.cpp  path.hpp  paths.cpp  paths.hpp  raw_imgui_callback.hpp
src/lua/bindings/hades/: audio.cpp  audio.hpp
src/lua/bindings/toml/: toml_lua.cpp  toml_lua.hpp
src/lua_extensions/: lua_manager_extension.cpp  lua_manager_extension.hpp  lua_module_ext.hpp
src/lua_extensions/bindings/: gui_ext.cpp  lpeg.cpp  lpeg.hpp  paths_ext.cpp  paths_ext.hpp
src/lua_extensions/bindings/hades/: audio.cpp  audio.hpp  data.cpp  data.hpp  draw.cpp  draw.hpp  gpk.cpp  gpk.hpp  hades_ida.hpp  inputs.cpp  inputs.hpp  lz4.cpp  lz4.hpp  tethers.cpp  tethers.hpp  ui.cpp  ui.hpp
src/lua_extensions/bindings/luasocket/: luasocket.cpp  luasocket.hpp  luasocket_scripts.cpp  luasocket_scripts.hpp
src/lua_extensions/bindings/tolk/: tolk.cpp  tolk.hpp
src/memory/: batch.hpp  gm_address.hpp  handle.hpp  module.cpp  module.hpp  range.hpp
src/paths/: paths.cpp
src/threads/: thread_pool.cpp
thunderstore/: thunderstore.toml
